load family refactor